refactor: sonar cleanup